@@ -16,6 +16,8 @@ documents those changes that are of interest to users and administrators.
     go into JobAdminHeld.
  -- sched/backfill - Fix logic to reserve resources for jobs that require a
     node reboot (i.e. to change KNL mode) in order to start.
+ -- When unpacking a node or front_end record from state and the protocol
+    version is lower than the min version, set it to the min.
 
 * Changes in Slurm 16.05.7
 ==========================
